flex/flex-tests/testData/js2_highlighting/StaticMethodCannotBeFinal.js2
class Foo {
    static <error descr="Static method cannot be final">final</error> function foo() {}
}